--- a/Telas/portfolio.html
+++ b/Telas/portfolio.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../dist/css/lightbox.min.css">
     <script type="text/javascript" src="../javascript/IServices.js"></script>
     <script src="https://kit.fontawesome.com/10a7600da8.js" crossorigin="anonymous"></script>
 
@@ -53,11 +54,12 @@
             </header>
 
     <!-- Header -->
-    <header class="bg-primary py-5 mb-5">
+    <div class="bg-primary py-5 mb-1">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-lg-12">
-                    <h1 class="display-4 text-white mt-5 mb-2">Maria Antonieta</h1>
+                    <h1 class="display-4 text-white mt-5 mb-2" style="position:relative; right:65%;">Maria Antonieta</h1>
+                    <img src="../images/mina.jpg" style="position: relative; max-width: 40%; max-height: 0%;">
                     <p class="lead mb-5 text-white-50">Uma breve dedscrição dela sobre ela mesma</p>
                     <span class="badge badge-light badge-pill">Reparos</span> <span class="badge badge-light badge-pill">Vestidos de baile</span> <span class="badge badge-light badge-pill">Saias</span>
                     <span class="badge badge-light badge-pill">Reparos</span> <span class="badge badge-light badge-pill">Vestidos de baile</span> <span class="badge badge-light badge-pill">Saias</span>
@@ -65,7 +67,14 @@
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+    <section>
+        <div>
+            <img class="lightbox" href="../images/kids.jpg" data-lightbox="">
+            <a href="../images/musica.jpg" data-lightbox="roadtrip">Image #3</a>
+            <a href="../images/web.jpg" data-lightbox="roadtrip">Image #4</a>
+        </div>
+    </section>
 
     <!-- Page Content -->
     <div class="container">
@@ -280,6 +289,7 @@
         </div>
     </footer>
     <!-- Footer final-->
+    <script src="../dist/js/lightbox-plus-jquery.min.js"></script>
 </body>
 
 </html>
